Ajoute les habilitations et events à l'API
